unpackaged/main/default/objects/Onboarding__c/Onboarding__c.object-meta.xml
<CustomObject>
    <label>Onboarding</label>
    <nameField>
        <displayFormat>O-{0000000}</displayFormat>
        <label>Onboarding No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Onboarding</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>