unpackaged/main/default/objects/Onboarding__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>R1812905</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Onboarding</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>