unpackaged/main/default/objects/Onboarding__c/fields/Account_Setup__c.field-meta.xml
<CustomField>
    <fullName>Account_Setup__c</fullName>
    <label>Account Setup</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>