unpackaged/main/default/objects/Onboarding__c/fields/Admin_Portal__c.field-meta.xml
<CustomField>
    <fullName>Admin_Portal__c</fullName>
    <formula>IF(
OR(
Product_Environment__r.RecordType.Name != &quot;MyCase&quot;,
ISBLANK(Product_Environment__r.Subdomain__c)
),
&quot;N/A&quot;,
HYPERLINK(&quot;https://&quot;&amp; Product_Environment__r.Subdomain__c &amp; &quot;.mycase.com/admin/firm&quot;, &#39;MyCase Admin Portal Link&#39;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Admin Portal</label>
    <type>Text</type>
</CustomField>