unpackaged/main/default/objects/Onboarding__c/fields/Bypass_VR_and_Automation__c.field-meta.xml
<CustomField>
    <fullName>Bypass_VR_and_Automation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used by automation to bypass processing where incorporated into the flow.</inlineHelpText>
    <label>Bypass Automation</label>
    <type>Checkbox</type>
</CustomField>