unpackaged/main/default/objects/Onboarding__c/fields/Check_in_Notes__c.field-meta.xml
<CustomField>
    <fullName>Check_in_Notes__c</fullName>
    <description>R1812905</description>
    <label>Check-in Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>