unpackaged/main/default/objects/Onboarding__c/fields/Churn_Risk__c.field-meta.xml
<CustomField>
    <fullName>Churn_Risk__c</fullName>
    <description>R1918003</description>
    <label>Churn Risk</label>
    <type>Date</type>
</CustomField>