unpackaged/main/default/objects/Onboarding__c/fields/Current_Solution__c.field-meta.xml
<CustomField>
    <fullName>Current_Solution__c</fullName>
    <description>R1812905</description>
    <formula>TEXT( Account__r.MyCase_Current_Solution__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Solution</label>
    <type>Text</type>
</CustomField>