unpackaged/main/default/objects/Onboarding__c/fields/Data_Implementation_Owner__c.field-meta.xml
<CustomField>
    <fullName>Data_Implementation_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Data Implementation Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Onboarding1</relationshipName>
    <type>Lookup</type>
</CustomField>