unpackaged/main/default/objects/Onboarding__c/fields/Data_Import_Source__c.field-meta.xml
<CustomField>
    <fullName>Data_Import_Source__c</fullName>
    <label>Data Import Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abacus</fullName>
            </value>
            <value>
                <fullName>Abacus Law</fullName>
            </value>
            <value>
                <fullName>ACT!</fullName>
            </value>
            <value>
                <fullName>ActionStep</fullName>
            </value>
            <value>
                <fullName>Aderant</fullName>
            </value>
            <value>
                <fullName>Advologix</fullName>
            </value>
            <value>
                <fullName>Amicus</fullName>
            </value>
            <value>
                <fullName>Best Case</fullName>
            </value>
            <value>
                <fullName>Bill4Time</fullName>
            </value>
            <value>
                <fullName>BillingsPro</fullName>
            </value>
            <value>
                <fullName>Casepacer</fullName>
            </value>
            <value>
                <fullName>Client Profiles</fullName>
            </value>
            <value>
                <fullName>Clio</fullName>
            </value>
            <value>
                <fullName>Cloudlex</fullName>
            </value>
            <value>
                <fullName>CoCounselor</fullName>
            </value>
            <value>
                <fullName>Cosmolex</fullName>
            </value>
            <value>
                <fullName>Daylite</fullName>
            </value>
            <value>
                <fullName>E-Bility</fullName>
            </value>
            <value>
                <fullName>Excel</fullName>
            </value>
            <value>
                <fullName>Filemaker</fullName>
            </value>
            <value>
                <fullName>Filevine</fullName>
            </value>
            <value>
                <fullName>Firm Central</fullName>
            </value>
            <value>
                <fullName>Firm Manager</fullName>
            </value>
            <value>
                <fullName>GroupReady</fullName>
            </value>
            <value>
                <fullName>Harvest</fullName>
            </value>
            <value>
                <fullName>Houdini</fullName>
            </value>
            <value>
                <fullName>Insightly</fullName>
            </value>
            <value>
                <fullName>Interbill</fullName>
            </value>
            <value>
                <fullName>Juris</fullName>
            </value>
            <value>
                <fullName>Lawmatics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>