unpackaged/main/default/objects/Onboarding__c/fields/Data_Migration_Controlled_By__c.field-meta.xml
<CustomField>
    <fullName>Data_Migration_Controlled_By__c</fullName>
    <description>This field indicates whether the data migration was completed by an internal or external team.</description>
    <label>Data Migration Controlled By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
                <default>true</default>
                <label>Internal</label>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>