unpackaged/main/default/objects/Onboarding__c/fields/Data_Migration_Discount__c.field-meta.xml
<CustomField>
    <fullName>Data_Migration_Discount__c</fullName>
    <label>Data Migration Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>