unpackaged/main/default/objects/Onboarding__c/fields/Data_Migration_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Data_Migration_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>MC; R2029390; Edited: Users</description>
    <label>Data Migration Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MyCase_Onboarding</relationshipName>
    <type>Lookup</type>
</CustomField>