unpackaged/main/default/objects/Onboarding__c/fields/Data_Migration_Stage__c.field-meta.xml
<CustomField>
    <fullName>Data_Migration_Stage__c</fullName>
    <description>R1812905; Updated R1813936_v2</description>
    <label>Onboarding Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Introduction sent</fullName>
            </value>
            <value>
                <fullName>KOC Scheduled</fullName>
            </value>
            <value>
                <fullName>KOC Completed</fullName>
            </value>
            <value>
                <fullName>Phase 1: Import In Progress</fullName>
            </value>
            <value>
                <fullName>Phase 1: Import Sign-off</fullName>
            </value>
            <value>
                <fullName>Phase 1: Import Complete</fullName>
            </value>
            <value>
                <fullName>Phase 2: Import In Progress</fullName>
            </value>
            <value>
                <fullName>Phase 2: Import Sign-Off</fullName>
            </value>
            <value>
                <fullName>Phase 2: Import Complete</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Data Migration</fullName>
            </value>
            <value>
                <fullName>Account Setup</fullName>
            </value>
            <value>
                <fullName>Scheduling Training</fullName>
            </value>
            <value>
                <fullName>Training Scheduled</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Live</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Churn Risk</fullName>
            </value>
            <value>
                <fullName>Non-responsive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>