unpackaged/main/default/objects/Onboarding__c/fields/Data_Migration_Tier__c.field-meta.xml
<CustomField>
    <fullName>Data_Migration_Tier__c</fullName>
    <label>Data Migration Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General Excel</fullName>
            </value>
            <value>
                <fullName>Custom Excel</fullName>
            </value>
            <value>
                <fullName>Custom Pro</fullName>
            </value>
            <value>
                <fullName>Custom Premium</fullName>
            </value>
            <value>
                <fullName>CASEpeer to CASEpeer Basic</fullName>
            </value>
            <value>
                <fullName>CASEpeer to CASEpeer Pro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>