unpackaged/main/default/objects/Onboarding__c/fields/Data_POC__c.field-meta.xml
<CustomField>
    <fullName>Data_POC__c</fullName>
    <description>Data migration point of contact.</description>
    <label>Data POC</label>
    <length>40</length>
    <type>Text</type>
</CustomField>