unpackaged/main/default/objects/Onboarding__c/fields/Data_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Data_Received_Date__c</fullName>
    <label>Data Received Date</label>
    <type>Date</type>
</CustomField>