unpackaged/main/default/objects/Onboarding__c/fields/Days_In_Data_Import__c.field-meta.xml
<CustomField>
    <fullName>Days_In_Data_Import__c</fullName>
    <description>Updated R1813936_v2, Updated per #3955</description>
    <formula>IF(
NOT(ISBLANK(Import_Complete__c)),
CASE(MOD( In_Progress__c - DATE(1985,6,24),7),
0 , CASE( MOD( Import_Complete__c - In_Progress__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1),
1 , CASE( MOD( Import_Complete__c - In_Progress__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1),
2 , CASE( MOD( Import_Complete__c - In_Progress__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1),
3 , CASE( MOD( Import_Complete__c - In_Progress__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1),
4 , CASE( MOD( Import_Complete__c - In_Progress__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1),
5 , CASE( MOD( Import_Complete__c - In_Progress__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0),
6 , CASE( MOD( Import_Complete__c - In_Progress__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0),
999)
+
(FLOOR(( Import_Complete__c - In_Progress__c )/7)*5)
,
CASE(MOD( In_Progress__c - DATE(1985,6,24),7),
0 , CASE( MOD( TODAY() - In_Progress__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1),
1 , CASE( MOD( TODAY() - In_Progress__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1),
2 , CASE( MOD( TODAY() - In_Progress__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1),
3 , CASE( MOD( TODAY() - In_Progress__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1),
4 , CASE( MOD( TODAY() - In_Progress__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1),
5 , CASE( MOD( TODAY() - In_Progress__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0),
6 , CASE( MOD( TODAY() - In_Progress__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0),
999)
+
(FLOOR(( TODAY() - In_Progress__c )/7)*5))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of days to complete Phase 1 Data, excluding weekends.</inlineHelpText>
    <label>Phase 1: Days in data import</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>