unpackaged/main/default/objects/Onboarding__c/fields/Days_In_Data_Migration__c.field-meta.xml
<CustomField>
    <fullName>Days_In_Data_Migration__c</fullName>
    <formula>Migration_Completed_Date__c - Data_Received_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Migration_Completed_Date__c - Data_Received_Date__c</inlineHelpText>
    <label>Days In Data Migration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>