unpackaged/main/default/objects/Onboarding__c/fields/Days_Since_Last_Login__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Login__c</fullName>
    <description>R1813936_v2</description>
    <formula>Metrics__r.Days_Since_Last_Login__c</formula>
    <label>Days Since Last Login</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>