unpackaged/main/default/objects/Onboarding__c/fields/Decision_Maker_s_and_role_at_firm__c.field-meta.xml
<CustomField>
    <fullName>Decision_Maker_s_and_role_at_firm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Decision Maker(s) and role at firm</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Onboarding (Decision Maker(s) and role at firm)</relationshipLabel>
    <relationshipName>Onboarding1</relationshipName>
    <type>Lookup</type>
</CustomField>