unpackaged/main/default/objects/Onboarding__c/fields/Doc_Migration_Plan_Details__c.field-meta.xml
<CustomField>
    <fullName>Doc_Migration_Plan_Details__c</fullName>
    <label>Doc Migration Plan Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>