unpackaged/main/default/objects/Onboarding__c/fields/Doc_Migration_Plan_Discussed__c.field-meta.xml
<CustomField>
    <fullName>Doc_Migration_Plan_Discussed__c</fullName>
    <label>Doc Migration Plan Discussed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>