unpackaged/main/default/objects/Onboarding__c/fields/Firm_POC__c.field-meta.xml
<CustomField>
    <fullName>Firm_POC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>R1812905</description>
    <label>Firm POC</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Onboarding (Firm POC)</relationshipLabel>
    <relationshipName>Onboarding</relationshipName>
    <type>Lookup</type>
</CustomField>