unpackaged/main/default/objects/Onboarding__c/fields/Firm_POC_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Firm_POC_First_Name__c</fullName>
    <description>R1917444</description>
    <formula>Firm_POC__r.FirstName</formula>
    <label>Firm POC First Name</label>
    <type>Text</type>
</CustomField>