unpackaged/main/default/objects/Onboarding__c/fields/Firm_POC_Phone__c.field-meta.xml
<CustomField>
    <fullName>Firm_POC_Phone__c</fullName>
    <description>R1812905</description>
    <formula>Firm_POC__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Firm POC Phone</label>
    <type>Text</type>
</CustomField>