unpackaged/main/default/objects/Onboarding__c/fields/Go_Live_Target__c.field-meta.xml
<CustomField>
    <fullName>Go_Live_Target__c</fullName>
    <description>R1812905</description>
    <label>Go Live Target</label>
    <type>Date</type>
</CustomField>