unpackaged/main/default/objects/Onboarding__c/fields/Import_Complete__c.field-meta.xml
<CustomField>
    <fullName>Import_Complete__c</fullName>
    <description>R1813936_v2, R2029390</description>
    <label>Phase 1: Import Complete</label>
    <type>Date</type>
</CustomField>