unpackaged/main/default/objects/Onboarding__c/fields/Import_N_A__c.field-meta.xml
<CustomField>
    <fullName>Import_N_A__c</fullName>
    <description>R1812905; Updated R1813936_v2</description>
    <label>Import N/A</label>
    <type>Date</type>
</CustomField>