unpackaged/main/default/objects/Onboarding__c/fields/Import_N_A_checkbox__c.field-meta.xml
<CustomField>
    <fullName>Import_N_A_checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>R1918004</description>
    <label>Import N/A</label>
    <type>Checkbox</type>
</CustomField>