unpackaged/main/default/objects/Onboarding__c/fields/In_Progress__c.field-meta.xml
<CustomField>
    <fullName>In_Progress__c</fullName>
    <description>R1812905, R1813936_v2, R2029390</description>
    <label>Phase 1: Import In Progress</label>
    <type>Date</type>
</CustomField>