unpackaged/main/default/objects/Onboarding__c/fields/Initial_Outreach__c.field-meta.xml
<CustomField>
    <fullName>Initial_Outreach__c</fullName>
    <description>R1813936_v2</description>
    <label>Initial Outreach</label>
    <type>Date</type>
</CustomField>