unpackaged/main/default/objects/Onboarding__c/fields/Integrations_Requested__c.field-meta.xml
<CustomField>
    <fullName>Integrations_Requested__c</fullName>
    <label>Integrations Requested</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abacus</fullName>
            </value>
            <value>
                <fullName>ACT</fullName>
            </value>
            <value>
                <fullName>Aderant</fullName>
            </value>
            <value>
                <fullName>Alert Communications</fullName>
            </value>
            <value>
                <fullName>Amicus</fullName>
            </value>
            <value>
                <fullName>ApexChat</fullName>
            </value>
            <value>
                <fullName>Calendar Rules</fullName>
            </value>
            <value>
                <fullName>Capterra</fullName>
            </value>
            <value>
                <fullName>CasePacer</fullName>
            </value>
            <value>
                <fullName>Case Status</fullName>
            </value>
            <value>
                <fullName>ChartSquad</fullName>
            </value>
            <value>
                <fullName>Client Chat Live</fullName>
            </value>
            <value>
                <fullName>Client Profiles</fullName>
            </value>
            <value>
                <fullName>Clio</fullName>
            </value>
            <value>
                <fullName>Cloudlex</fullName>
            </value>
            <value>
                <fullName>CoCounselor</fullName>
            </value>
            <value>
                <fullName>CosmoLex</fullName>
            </value>
            <value>
                <fullName>Custom Solution</fullName>
            </value>
            <value>
                <fullName>Dropbox</fullName>
            </value>
            <value>
                <fullName>File Manager</fullName>
            </value>
            <value>
                <fullName>Filevine</fullName>
            </value>
            <value>
                <fullName>Growpath</fullName>
            </value>
            <value>
                <fullName>Kenect</fullName>
            </value>
            <value>
                <fullName>LawBase</fullName>
            </value>
            <value>
                <fullName>LawPay</fullName>
            </value>
            <value>
                <fullName>LeadDocket</fullName>
            </value>
            <value>
                <fullName>Litify</fullName>
            </value>
            <value>
                <fullName>Mailchimp</fullName>
            </value>
            <value>
                <fullName>Merus Case</fullName>
            </value>
            <value>
                <fullName>Milestones</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>