unpackaged/main/default/objects/Onboarding__c/fields/Integrations_Selected__c.field-meta.xml
<CustomField>
    <fullName>Integrations_Selected__c</fullName>
    <label>Integrations Selected</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>