unpackaged/main/default/objects/Onboarding__c/fields/Introduction_Sent__c.field-meta.xml
<CustomField>
    <fullName>Introduction_Sent__c</fullName>
    <label>Introduction Sent</label>
    <type>Date</type>
</CustomField>