unpackaged/main/default/objects/Onboarding__c/fields/Key_Migration_Data_Points__c.field-meta.xml
<CustomField>
    <fullName>Key_Migration_Data_Points__c</fullName>
    <label>Key Migration Data Points</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>