unpackaged/main/default/objects/Onboarding__c/fields/Kick_Off_Notes__c.field-meta.xml
<CustomField>
    <fullName>Kick_Off_Notes__c</fullName>
    <description>R1812905</description>
    <label>Kick Off Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>