unpackaged/main/default/objects/Onboarding__c/fields/KOC__c.field-meta.xml
<CustomField>
    <fullName>KOC__c</fullName>
    <description>R1812905; Updated R1813936_v2</description>
    <label>KOC Completed</label>
    <type>Date</type>
</CustomField>