unpackaged/main/default/objects/Onboarding__c/fields/KOC_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>KOC_Scheduled__c</fullName>
    <description>R1813936_v2</description>
    <label>KOC Scheduled</label>
    <type>Date</type>
</CustomField>