unpackaged/main/default/objects/Onboarding__c/fields/Last_Login__c.field-meta.xml
<CustomField>
    <fullName>Last_Login__c</fullName>
    <description>R1812905</description>
    <formula>Metrics__r.Last_User_Login_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Login</label>
    <type>DateTime</type>
</CustomField>