unpackaged/main/default/objects/Onboarding__c/fields/Last_Login_Task_Created__c.field-meta.xml
<CustomField>
    <fullName>Last_Login_Task_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>R1812905</description>
    <label>Last Login Task Created</label>
    <type>Checkbox</type>
</CustomField>