unpackaged/main/default/objects/Onboarding__c/fields/Legacy_Software__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Software__c</fullName>
    <label>Legacy Software</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>