unpackaged/main/default/objects/Onboarding__c/fields/Legacy_System_Field__c.field-meta.xml
<CustomField>
    <fullName>Legacy_System_Field__c</fullName>
    <label>Legacy System Field</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abacus</fullName>
            </value>
            <value>
                <fullName>ACT</fullName>
            </value>
            <value>
                <fullName>Aderant</fullName>
            </value>
            <value>
                <fullName>Advologix</fullName>
            </value>
            <value>
                <fullName>Amicus</fullName>
            </value>
            <value>
                <fullName>Casepacer</fullName>
            </value>
            <value>
                <fullName>Clio</fullName>
            </value>
            <value>
                <fullName>Cloudlex</fullName>
            </value>
            <value>
                <fullName>CoCounselor</fullName>
            </value>
            <value>
                <fullName>Client Profiles</fullName>
            </value>
            <value>
                <fullName>Daylite</fullName>
            </value>
            <value>
                <fullName>Filemaker</fullName>
            </value>
            <value>
                <fullName>Filevine</fullName>
            </value>
            <value>
                <fullName>Insightly</fullName>
            </value>
            <value>
                <fullName>Leap</fullName>
            </value>
            <value>
                <fullName>Legal Eagle</fullName>
            </value>
            <value>
                <fullName>Litfy</fullName>
            </value>
            <value>
                <fullName>MyCase</fullName>
            </value>
            <value>
                <fullName>Needles</fullName>
            </value>
            <value>
                <fullName>Neos</fullName>
            </value>
            <value>
                <fullName>PI Master</fullName>
            </value>
            <value>
                <fullName>PRacticeMaster</fullName>
            </value>
            <value>
                <fullName>PracticePanther</fullName>
            </value>
            <value>
                <fullName>Prevail</fullName>
            </value>
            <value>
                <fullName>ProLaw</fullName>
            </value>
            <value>
                <fullName>RocketMatter</fullName>
            </value>
            <value>
                <fullName>Smart Advocate</fullName>
            </value>
            <value>
                <fullName>Sugar CRM</fullName>
            </value>
            <value>
                <fullName>TimeMatters</fullName>
            </value>
            <value>
                <fullName>TrailWorks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>